--- a/ionic/www/templates/touchid.html
+++ b/ionic/www/templates/touchid.html
@@ -13,8 +13,9 @@
                     <input type="password" name="password" placeholder="Digite sua senha" ng-model="user.password" required="required"/>
                 </label>
             </div>
-            <button type="submit" class="button button-full button-assertive">Login</button>
-            <button type="button" class="button button-full button-balanced" ng-show="isSupportTouchID" ng-click="loginWithTouchID()">TouchID</button>
+            <!--<button type="submit" class="button button-full button-assertive">Login</button>-->
+            <!--<button type="button" class="button button-full button-balanced" ng-show="isSupportTouchID" ng-click="loginWithTouchID()">TouchID</button>-->
+            <button type="submit" class="button button-full button-assertive">Adicionar Suporte</button>
         </form>
     </ion-content>
 </ion-view>
