--- a/ionic/www/templates/client/menu.html
+++ b/ionic/www/templates/client/menu.html
@@ -26,7 +26,7 @@
                     Meus pedidos
                 </ion-item>
 
-                <ion-item class="item-icon-left" menu-close ui-sref="client.touchid">
+                <ion-item class="item-icon-left" menu-close ui-sref="client.touchid" ng-show="isSupportTouchID">
                     <i class="icon ion-android-list"></i>
                     Habilitar TouchID
                 </ion-item>
